// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuestsList Component should handle multiple display states: fulfilled 1`] = `
<div
  className="fadein "
>
  <div
    className="curiosity-table-scroll"
    style={
      {
        "height": "84px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list__no-scroll"
      onScroll={[Function]}
    >
      <Table
        ariaLabel={null}
        borders={false}
        className="curiosity-guests-list"
        columnHeaders={
          [
            "t(curiosity-inventory.header, {"context":"lorem"})",
            "t(curiosity-inventory.header, {"context":"dolor"})",
          ]
        }
        isHeader={true}
        rows={
          [
            {
              "cells": [
                "ipsum",
                "sit",
              ],
            },
          ]
        }
        summary={null}
        t={[Function]}
        variant="compact"
      />
    </div>
  </div>
</div>
`;

exports[`GuestsList Component should handle multiple display states: initial pending 1`] = `
<div
  className="fadein "
>
  <Loader
    skeletonProps={
      {
        "size": "sm",
      }
    }
    tableProps={
      {
        "borders": false,
        "className": "curiosity-guests-list",
        "colCount": 1,
        "colWidth": [],
        "rowCount": 1,
        "variant": "compact",
      }
    }
    variant="table"
  />
</div>
`;

exports[`GuestsList Component should handle multiple display states: paged pending 1`] = `
<div
  className="fadein "
>
  <div
    className="curiosity-table-scroll"
    style={
      {
        "height": "84px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list__no-scroll"
      onScroll={[Function]}
    >
      <div
        className="curiosity-table-scroll-loader__custom"
      >
        <Loader
          skeletonProps={
            {
              "size": "sm",
            }
          }
          tableProps={
            {
              "borders": false,
              "colCount": 1,
              "colWidth": [],
              "rowCount": 0,
              "variant": "compact",
            }
          }
          variant="table"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`GuestsList Component should handle updating paging state: state 1`] = `
{
  "initialState": {
    "currentPage": 0,
    "limit": 100,
    "previousData": [],
  },
  "scrollComplete": {
    "currentPage": 1,
    "limit": 100,
    "previousData": [
      {
        "dolor": "sit",
        "lorem": "ipsum",
      },
    ],
  },
  "scrollProgress": {
    "currentPage": 0,
    "limit": 100,
    "previousData": [],
  },
}
`;

exports[`GuestsList Component should handle variations in data: filtered data 1`] = `
<div
  className="fadein "
>
  <div
    className="curiosity-table-scroll"
    style={
      {
        "height": "126px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list__no-scroll"
      onScroll={[Function]}
    >
      <Table
        ariaLabel={null}
        borders={false}
        className="curiosity-guests-list"
        columnHeaders={
          [
            {
              "title": "t(curiosity-inventory.header, {"context":"lorem"})",
              "transforms": [],
            },
          ]
        }
        isHeader={true}
        rows={
          [
            {
              "cells": [
                {
                  "title": "ipsum",
                },
              ],
            },
            {
              "cells": [
                {
                  "title": "amet",
                },
              ],
            },
          ]
        }
        summary={null}
        t={[Function]}
        variant="compact"
      />
    </div>
  </div>
</div>
`;

exports[`GuestsList Component should handle variations in data: variable data 1`] = `
<div
  className="fadein "
>
  <div
    className="curiosity-table-scroll"
    style={
      {
        "height": "126px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list__no-scroll"
      onScroll={[Function]}
    >
      <Table
        ariaLabel={null}
        borders={false}
        className="curiosity-guests-list"
        columnHeaders={
          [
            "t(curiosity-inventory.header, {"context":"lorem"})",
            "t(curiosity-inventory.header, {"context":"dolor"})",
          ]
        }
        isHeader={true}
        rows={
          [
            {
              "cells": [
                "ipsum",
                "sit",
              ],
            },
            {
              "cells": [
                "amet",
                "amet",
              ],
            },
          ]
        }
        summary={null}
        t={[Function]}
        variant="compact"
      />
    </div>
  </div>
</div>
`;

exports[`GuestsList Component should render a non-connected component: non-connected 1`] = `
<div
  className="fadein "
>
  <div
    className="curiosity-table-scroll"
    style={
      {
        "height": "42px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list__no-scroll"
      onScroll={[Function]}
    />
  </div>
</div>
`;
